--- a/src/views/components/Loading.css
+++ b/src/views/components/Loading.css
@@ -8,37 +8,30 @@
 }
 /* HTML: <div class="loader"></div> */
 .loader {
-  display: inline-grid;
-  width: 30px;
+  width: 40px;
   aspect-ratio: 1;
-  background: #574951;
-  animation: 
-    l12-0 4s steps(4) infinite,
-    l12-1 6s linear infinite;
+  display: grid;
+  animation: l8-0 1.5s infinite linear;
 }
 .loader:before,
 .loader:after {
   content: "";
   grid-area: 1/1;
-  background: #83988E;
-  clip-path: polygon(100% 50%,65.45% 97.55%,9.55% 79.39%,9.55% 20.61%,65.45% 2.45%);
-  transform-origin: right;
-  translate: -100% 50%;
-  scale: 1.7;
-  animation: l12-2 1s linear infinite;
+  background: #25b09b;
+  clip-path: polygon(0 0%,100% 0,100% 100%);
+  animation: inherit;
+  animation-name: l8-1;
 }
 .loader:after {
-  clip-path: polygon(90.45% 79.39%,34.55% 97.55%,0% 50%,34.55% 2.45%,90.45% 20.61%);
-  transform-origin: left;
-  translate: 100% -50%;
+  --s:-1;
 }
-@keyframes l12-0 {
-  to{rotate: 1turn}
+@keyframes l8-0 {
+  66%      {transform: skewX(0deg)}
+  80%,100% {transform: skewX(-45deg)}
 }
-@keyframes l12-1 {
-  to{transform: rotate(1turn)}
-}
-@keyframes l12-2 {
-  0%{rotate:  36deg}
-  to{rotate: -126deg}
+@keyframes l8-1 {
+  0%   {transform:scale(var(--s,1)) translate(-0.5px,0)}
+  33%  {transform:scale(var(--s,1)) translate(calc(1px - 50%),calc(1px - 50%))}
+  66%  {transform:scale(var(--s,1)) translate(calc(1px - 50%),0%)}
+  100% {transform:scale(var(--s,1)) translate(calc(0.5px - 50%),0%)}
 }
